## =====================================================================================
##  C O P Y R I G H T
## -------------------------------------------------------------------------------------
##  Copyright (c) 2023 by Robert Bosch GmbH. All rights reserved.
##
##  Author(s):
##  - Markus Braun, :em engineering methods AG (contracted by Robert Bosch GmbH)
## =====================================================================================

[tool.poetry]
name = "doxysphinx"
version = "3.2.3"
description = "Integrates doxygen html documentation with sphinx."
authors = [
    "Nirmal Sasidharan <nirmal.sasidharan@de.bosch.com>",
    "Markus Braun <markus.braun@em.ag>",
    "Aniket Salve <aniketdilip.salve@bosch.com>",
]
maintainers = ["Nirmal Sasidharan <nirmal.sasidharan@de.bosch.com>"]
license = "MIT"
homepage = "https://github.com/boschglobal/doxysphinx"
repository = "https://github.com/boschglobal/doxysphinx"
documentation = "https://boschglobal.github.io/doxysphinx/"
readme = "README.md"
keywords = ["DaC", "docs-as-code", "doxygen", "sphinx"]
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: reStructuredText",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Documentation",
]
packages = [{ include = "doxysphinx" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
lxml = "^4.9.1"
json5 = "^0.9.8"
colorama = { version = "^0.4.5", platform = "windows" }
click = "^8.1.3"
click-log = "^0.4.0"
pyparsing = "^3.0.9"

[tool.poetry.group.dev.dependencies]
lxml-stubs = "^0.3.1"
pytest = "^7.1.2"
sphinx = "^4.5.0"
Pillow = "^9.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-needs = "^0.7.9"
sphinxcontrib-plantuml = "^0.22"
sphinxcontrib-doxylink = "^1.12.0"
sphinx-test-reports = "^0.3.7"
sphinx-theme = "^1.0"
sphinx-copybutton = "^0.5.0"
pex = "^2.1.99"
sphinx-book-theme = "^0.2.0"
snakeviz = "^2.1.1"
myst-parser = "^0.17.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.7.1"
black = "^22.6.0"
isort = "^5.12.0"
bandit = "^1.7.4"
safety = "^1.10.3"
flake8-comprehensions = "^3.10.0"
flake8-simplify = "^0.19.2"
mypy = "^0.942"
toml = "^0.10.2"
types-PyYAML = "^6.0.10"
cohesion = "^1.0.0"
pydocstyle = "^6.1.1"
sphinx_design = "^0.1.0"
sphinx-toolbox = "^3.1.2"
flake8-docstrings = "^1.6.0"
pytest-emoji = "^0.2.0"
pytest-md = "^0.2.0"
commitizen = "^2.29.0"
sphinx-autoapi = "^2.0.0"

[tool.poetry.scripts]
doxysphinx = "doxysphinx.cli:cli"

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.2.3"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
bump_message = """chore(release): release $current_version → $new_version by commitizen [skip-ci]

Signed-off-by: github-actions <actions@github.com>
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_level = "DEBUG"
testpaths = ["tests"]
junit_logging = "out-err"
markers = ["speed: manual speed tests"]
addopts = "-m 'not speed'"

[tool.semantic_release]
version_source = "commit"
version_variable = ["pyproject.toml:version"]
changelog_file = "CHANGELOG.md"
branch = "main"
commit_message = """chore(release): release {version} published by python-semantic-release [skip ci]

Signed-off-by: github-actions <actions@github.com>
"""
commit_author = "github-actions <actions@github.com>"
# everything following is deactivated: we only want python-semantic-release to create the changelog and the version tags (because everything else is quite buggy)
upload_to_pypi = false
upload_to_release = false
build_command = false
remove_dist = false

[tool.black]
line-length = 120
target-version = ['py38']
# black doesn't need further excludes because it honors the .gitignore file
extend-exclude = "(docs/)|(demo/)|(\\.vscode)|(\\.idea)|(\\.devcontainer)"

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = [
    ".git",
    ".build",
    ".devcontainer",
    ".github",
    ".idea",
    ".package",
    ".pytest_cache",
    "__pycache__",
    ".venv",
    ".vscode",
    "dist",
    "docs",
    "demo",
    "tests",
]

[tool.bandit.assert_used]
skips = ["*/test_*.py"]

[tool.mypy]
python_version = 3.8
show_error_codes = true
ignore_missing_imports = true

[tool.pydocstyle]
match_dir = "doxysphinx"
ignore = "D301,D213,D212,D203"

[tool.pylint]
disable = ["logging-fstring-interpolation"]

[tool.pylint.FORMAT]
max-line-length = 120
